--- a/Frontend/ShoppingList.Frontend.WebApp/wwwroot/css/general/sizes.less
+++ b/Frontend/ShoppingList.Frontend.WebApp/wwwroot/css/general/sizes.less
@@ -1,1 +1,4 @@
 ﻿@mobile-menu-height: 63.15px;
+
+@desktop-view-size: 769px;
+@mobile-view-size: 768px;
